...
import 'package:myapp/screens/task/add_task_screen.dart';
import 'package:myapp/services/service_provider.dart';
import 'package:myapp/widgets/task_card.dart';
import 'package:myapp/widgets/habit_card.dart'; // Adicionar import do HabitCard
import 'package:myapp/screens/habit/habit_details_screen.dart'; // Importar HabitDetailsScreen

// Classe Wrapper para itens da lista "Hoje"
enum TodayItemType { habit, task }

class TodayListItem implements Comparable<TodayListItem> {
  final dynamic item; // Pode ser Habit ou Task
  final TodayItemType type;
  final DateTime sortDate; // Data para ordenação (dueDate para task, _selectedDate para habit)
...
  void _handleDeleteTask(String taskId) async {
    final taskService = ServiceProvider.of(context).taskService;
    final confirmDelete = await showDialog<bool>(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: const Text('Confirmar Exclusão'),
          content: const Text('Você tem certeza que deseja excluir esta tarefa?'),
          actions: <Widget>[
            TextButton(onPressed: () => Navigator.of(context).pop(false), child: const Text('Cancelar')),
            TextButton(onPressed: () => Navigator.of(context).pop(true), child: const Text('Excluir', style: TextStyle(color: Colors.red))),
          ],
        );
...
