...
  static String _normalizeCategoryName(String name) {
    final mapping = {
      'Abandonar hábito': 'abandonar_habito',
      'Arte': 'arte',
      'Tarefa': 'tarefa',
      'Meditação': 'meditacao',
      'Estudos': 'estudos',
      'Esportes': 'esportes',
      'Entretenimento': 'entretenimento',
      'Social': 'social',
      'Finança': 'financa',
      'Saúde': 'saude',
      'Trabalho': 'trabalho',
      'Nutrição': 'nutricao',
      'Casa': 'casa',
      'Ar livre': 'ar_livre',
      'Outros': 'outros',
    };
...
